<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forest"
    tools:context=".Gidroterm">

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_rectangle_9" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/End"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView34"
        app:layout_constraintEnd_toEndOf="@+id/imageView34"
        app:layout_constraintStart_toStartOf="@+id/imageView34"
        app:layout_constraintTop_toTopOf="@+id/imageView34" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/forest"
        android:contentDescription="@string/app_name"
        android:onClick="newGidroterm1_1Activity"
        app:layout_constraintBottom_toTopOf="@+id/imageView34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/klik" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/Klik4_1_1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton16"
        app:layout_constraintStart_toStartOf="@+id/imageButton16"
        app:layout_constraintTop_toTopOf="@+id/imageButton16" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/Klik4_1_2"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton16"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageButton16"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/Klik4_0"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView33"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView33"
        app:layout_constraintTop_toTopOf="@+id/imageView33" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/Klik4_0_1"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView33"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />
</androidx.constraintlayout.widget.ConstraintLayout>